
2010-December-31 Struan Robertson

	* MESMER manual.doc: Additions concerning ZPE, examples and other 
	minor changes.
	* Makefile: Minor tidying up.

2010-December-15 Chris Morley

	* mesmer1.xsl: display the eigenvalues that are present in XML file

2010-December-14 Chris Morley

	* Windows VC9/distribution/NSISScriptToCreateInstaller.nsi:
	Change default install folder from Program Files, which is read only
	on Windows 7 to C:\Mesmer-0.2. Add punch files.
	
	* Windows VC9/distribution/ReadMe.txt: updated email ads

2010-November-29 Struan Robertson

    * System.cpp, fitting.cpp: Altered so that microcanonical rates calculated 
    only once per parameter cycle during fitting, to improve performance.
    
2010-November-27 Struan Robertson

    * Makefile: Updated to reflect changes to the BoltzmannDistribution 
    plugin class.
    
    * MesmerQa/i-propyl: Linux baselines added.
    
2010-November-27 Struan Robertson

    * BoltzmannDistribution.cpp: Move to plug-in area and consolidated
    with header file.
    
    * Remove duplicate i-propyl example.
    
    * SimpleRRKM: Added comments.

2010-November-21 Struan Robertson

    * MESMER.sln: Removed references to deleted header files.

2010-November-17 Chris Morley
	
	* Transferred the declarations of plugin classes to their .cpp
	files and deleted the .h files.
	
	* src/MicroRate.cpp, src/MicroRate.h: moved utility functions
	ReadRange() and ILTCheck from SimpleILT
	
	* Windows VC8: delete build files for Visual Studio 2005
	
	* Documentation/MESMER manual.doc: minor edits in XML section.		

2010-November-14 Struan Robertson

    * MESMER manual.doc/.pdf: Added documentation of XML data access methods.

2010-November-13 Struan Robertson

    * MESMER manual.doc/.pdf: Updated the documentation to reflect recent 
    changes to plugin classes.

2010-November-8 Chris Morley

	* src/main.cpp,src/System.cpp,src/System.h,mesmer1.xsl,mesmer2.xsl:
	Add <description> element so that less information gets put in