@@ -1,4 +1,8 @@
 
+2011-January-4 Struan Robertson
+
+	* Makefile: Corrections to minor tidying up.
+
 2010-December-31 Struan Robertson
 
 	* MESMER manual.doc: Additions concerning ZPE, examples and other 
